<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".view.ui.CreateNoteActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/topBarLL"
            android:gravity="center_vertical"
            android:padding="@dimen/_12sdp"

            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imageBack"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_back"
                android:padding="@dimen/_2sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/black"
                android:layout_marginRight="@dimen/_12sdp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/updateCategoryLL"
                android:visibility="invisible"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/textMyNotes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_regular"
                    android:includeFontPadding="false"
                    android:text="Update Category"
                    android:textColor="@color/colorBlackTextColor"
                    android:textSize="@dimen/_13ssp"
                    android:textStyle="bold"
                    />
                <ImageView
                    android:id="@+id/imageUpdateCategory"
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:src="@drawable/ic_pencil"
                    android:padding="@dimen/_4sdp"
                    android:layout_marginLeft="@dimen/_4sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:tint="@color/black" />

            </LinearLayout>


            <ImageView
                android:id="@+id/imageSave"
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_22sdp"
                android:src="@drawable/ic_done"
                android:padding="@dimen/_2sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:tint="@color/black" />

        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_40sdp"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:animateLayoutChanges="true">


                <EditText
                    android:id="@+id/inputNoteTitle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:background="@null"
                    android:fontFamily="@font/ubuntu_bold"
                    android:hint="@string/activity_create_note_input_note_title_hint"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="text"
                    android:textColor="@color/colorBlackTextColor"
                    android:textColorHint="@color/colorTextHint"
                    android:textSize="@dimen/_16ssp"
                    app:layout_constraintTop_toBottomOf="@+id/imageBack" />

                <TextView
                    android:id="@+id/textDateTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_regular"
                    android:includeFontPadding="false"
                    android:layout_marginStart="@dimen/_12sdp"

                    android:textColor="@color/colorBlackTextColor"
                    android:textSize="@dimen/_10ssp"
                    android:layout_marginLeft="@dimen/_12sdp" />


                <EditText
                    android:id="@+id/inputNoteText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:background="@null"
                    android:fontFamily="@font/ubuntu_regular"
                    android:gravity="top"
                    android:hint="@string/activity_create_note_input_note_text_hint"
                    android:importantForAutofill="no"
                    android:includeFontPadding="false"
                    android:inputType="textMultiLine"
                    android:minHeight="@dimen/_100sdp"
                    android:textColor="@color/colorBlackTextColor"
                    android:textColorHint="@color/colorTextHint"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageNote" />


                <LinearLayout
                    android:id="@+id/LocationLL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:gravity="center_vertical"
                    android:background="@drawable/background_note"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageLocation"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:contentDescription="@string/app_name"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:src="@drawable/ic_location"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/colorBlue"
                        android:layout_marginLeft="@dimen/_8sdp" />

                    <TextView
                        android:id="@+id/addressTv"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_8sdp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:text="Address"
                        android:maxLines="3"
                        android:includeFontPadding="false"
                        android:textColor="@color/colorBlackTextColor"
                        android:textSize="@dimen/_12ssp" />

                    <ImageView
                        android:id="@+id/tickImg"
                        android:layout_width="@dimen/_18sdp"
                        android:layout_height="@dimen/_18sdp"
                        android:visibility="visible"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_pencil"
                        app:tint="@color/colorBlue"
                        android:layout_marginRight="@dimen/_8sdp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/audioCardLL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:gravity="center_vertical"
                    android:visibility="gone"
                    android:background="@drawable/background_note"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageAudio"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:contentDescription="@string/app_name"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:padding="@dimen/_2sdp"
                        android:src="@drawable/ic_headphone"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/colorBlue"
                        android:layout_marginLeft="@dimen/_8sdp" />

                    <TextView
                        android:id="@+id/audioTimeTv"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_8sdp"
                        android:fontFamily="@font/ubuntu_regular"
                        android:text="00:00"
                        android:maxLines="3"
                        android:includeFontPadding="false"
                        android:textColor="@color/colorBlackTextColor"
                        android:textSize="@dimen/_12ssp" />

                    <ImageView
                        android:id="@+id/audioPlayPauseImg"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:contentDescription="@string/app_name"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:padding="@dimen/_2sdp"
                        android:src="@drawable/ic_play"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/colorBlue" />

                    <ImageView
                        android:id="@+id/deleteAudioImg"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:visibility="visible"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:layout_marginEnd="@dimen/_8sdp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_delete"
                        app:tint="@color/colorDelete" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp"
                    >
                    <!--<ImageView
                        android:id="@+id/imageNote"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/_12sdp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/app_name"
                        android:visibility="gone" />-->

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/imageNote"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:visibility="gone"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:layout_marginEnd="@dimen/_12sdp"
                        android:layout_marginBottom="@dimen/_15sdp"
                        app:riv_corner_radius_top_left="@dimen/_10sdp"
                        app:riv_corner_radius_top_right="@dimen/_10sdp"
                        app:riv_corner_radius_bottom_right="@dimen/_10sdp"
                        app:riv_corner_radius_bottom_left="@dimen/_10sdp"
                        tools:ignore="MissingClass" />

                    <LinearLayout
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:gravity="top"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true">
                        <ImageView
                            android:id="@+id/imageRemoveImage"
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="@dimen/_25sdp"

                            android:layout_marginTop="@dimen/_30sdp"
                            android:background="@drawable/background_delete"
                            android:contentDescription="@string/app_name"
                            android:padding="@dimen/_4sdp"
                            android:layout_alignEnd="@+id/imageNote"
                            android:src="@drawable/ic_delete"
                            android:visibility="gone"
                            app:tint="@color/colorWhiteTextColor"
                            android:layout_alignRight="@+id/imageNote" />
                    </LinearLayout>


                </RelativeLayout>




            </LinearLayout>
        </ScrollView>
    </LinearLayout>



    <include
        android:id="@+id/layoutMiscellaneous"
        layout="@layout/layout_miscellaneous" />

    <include
        android:id="@+id/layoutAudioBottomSheet"
        layout="@layout/layout_audio_pick" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>